--- a/index.html
+++ b/index.html
@@ -54,28 +54,6 @@
             text-align: center; /* Centering output text */
             margin-top: 20px; /* Adding top margin to output */
         }
-
-        /* Styling for modal */
-        .modal {
-            display: none; /* Hide the modal by default */
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgb(0,0,0);
-            background-color: rgba(0,0,0,0.4);
-        }
-
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-        }
     </style>
 </head>
 <body>
@@ -83,22 +61,23 @@
     <h2><em>Vienna</em> by Billy Joel is one of my favorite songs. One of my favorite lines in the song is "When will you realize, Vienna waits for you?"... What is your Vienna?</h2>
     <form id="sentenceForm">
         <label for="userInput">When will you realize, <input type="text" id="userInput" name="userInput"> waits for you?</label>
-        <button type="submit" onclick="showModal()">Submit</button>
+        <button type="submit">Submit</button>
     </form>
 
-    <!-- Modal -->
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Thank you for submitting!</p>
-        </div>
-    </div>
+    <div id="output"></div>
 
     <script>
-        function showModal() {
-            var modal = document.getElementById("myModal");
-            modal.style.display = "block";
-        }
+        document.getElementById("sentenceForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Prevent default form submission
+            
+            var userInput = document.getElementById("userInput").value; // Get the user input
+            
+            // Display the filled-in sentence
+            document.getElementById("output").innerText = "Thank you! And, I hope you reach " + userInput + "!"; // Displaying the message
+
+            // Optionally, clear the input field after submission
+            document.getElementById("userInput").value = "";
+        });
     </script>
 </body>
 </html>
