--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <h1>Hello world! </h1>
-    <h2><em>Vienna</em> by Billy Joel is one of my favorite songs. One of my favorite lines in the song is "When will you realize, Vienna waits for you?"... What is your Vienna?</h2>
+    <h2 id="typingEffect"><em>Vienna</em> by Billy Joel is one of my favorite songs. One of my favorite lines in the song is "When will you realize, Vienna waits for you?"... What is your Vienna?</h2>
     <form id="sentenceForm">
         <label for="userInput">When will you realize, <input type="text" id="userInput" name="userInput"> waits for you?</label>
         <button type="submit">Submit</button>
@@ -67,17 +67,21 @@
     <div id="output"></div>
 
     <script>
+        // Simulate typing effect
+        var text = document.getElementById("typingEffect").innerText;
+        document.getElementById("typingEffect").innerText = "";
+        var i = 0;
+        function typeWriter() {
+            if (i < text.length) {
+                document.getElementById("typingEffect").innerHTML += text.charAt(i);
+                i++;
+                setTimeout(typeWriter, 50); // Adjust typing speed here (milliseconds)
+            }
+        }
+        typeWriter();
+
+        // Form submission
         document.getElementById("sentenceForm").addEventListener("submit", function(event) {
             event.preventDefault(); // Prevent default form submission
             
-            var userInput = document.getElementById("userInput").value; // Get the user input
-            
-            // Display the filled-in sentence
-            document.getElementById("output").innerText = "Thank you! And, I hope you reach " + userInput + "!"; // Displaying the message
-
-            // Optionally, clear the input field after submission
-            document.getElementById("userInput").value = "";
-        });
-    </script>
-</body>
-</html>
+            var userInput = document.getElementById("userInput").value; // Get the use
