--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vienna</title>
-    <link href="https://fonts.googleapis.com/css2?family=Aptos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> <!-- Importing Aptos font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue&display=swap" rel="stylesheet"> <!-- Importing Helvetica Neue font from Google Fonts -->
     <style>
         body {
-            font-family: 'Aptos', sans-serif; /* Applying Aptos font to the entire document */
+            font-family: 'Helvetica Neue', sans-serif; /* Applying Helvetica Neue font to the entire document */
             background-color: #f7f7f7; /* Adding a light background color */
             color: #333; /* Setting the text color */
             margin: 0; /* Removing default margin */
@@ -53,6 +53,24 @@
             font-size: 18px; /* Setting font size for output */
             text-align: center; /* Centering output text */
             margin-top: 20px; /* Adding top margin to output */
+            font-family: 'Helvetica Neue', sans-serif; /* Applying Helvetica Neue font to the output */
+            color: orange; /* Changing the text color to orange */
+        }
+
+        .iframe-container {
+            display: flex; /* Make the iframes display side by side */
+            justify-content: center; /* Center the iframes horizontally */
+            margin-top: 20px; /* Add some top margin */
+        }
+
+        .iframe-container iframe {
+            margin: 0 10px; /* Add some space between the iframes */
+            border-radius: 12px; /* Adding border radius to iframes */
+        }
+
+        .youtube-iframe {
+            width: 300px; /* Adjusting width of YouTube iframe */
+            height: 380px; /* Adjusting height of YouTube iframe */
         }
     </style>
 </head>
@@ -66,6 +84,11 @@
 
     <div id="output"></div>
 
+    <div class="iframe-container">
+        <iframe class="youtube-iframe" width="300" height="380" src="https://www.youtube.com/embed/wccRif2DaGs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe style="border-radius: 12px;" src="https://open.spotify.com/embed/track/4U45aEWtQhrm8A5mxPaFZ7?utm_source=generator&theme=0" width="300" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
+    
     <script>
         document.getElementById("sentenceForm").addEventListener("submit", function(event) {
             event.preventDefault(); // Prevent default form submission
